feat(be): updated User schema to be more realistic
