# be-node/api-routes/users.js
@@ -2,7 +2,7 @@ const repository = require('../repository');
 const { requestCounter } = require('../metrics');
 
 exports.post = function (req, res, next) {
-  repository.createUser(req.body.name, req.body.email, (err, user) => {
+  repository.createUser(req.body.name, req.body.email, req.body.hashed_password, req.body.is_active, req.body.role,  (err, user) => {
     if (err) {
       requestCounter.inc({ method: 'POST', endpoint: '/users', status_code: 500 });
       return res.status(500).json({ error: err.message });
