# be-node/openapi.yaml
@@ -84,19 +84,6 @@ paths:
           description: User deleted
         '404':
           description: User not found
-  /test:
-    get:
-      summary: Test endpoint
-      responses:
-        '200':
-          description: Test erfolgreich
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
   /metrics:
     get:
       summary: Prometheus metrics endpoint
@@ -119,6 +106,18 @@ components:
           type: string
         email:
           type: string
+        hashed_password:
+          type: string
+        is_active:
+          type: boolean
+        role:
+          type: string
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
     UserInput:
       type: object
       properties:
@@ -126,6 +125,15 @@ components:
           type: string
         email:
           type: string
-      # required:
-      #   - name
-      #   - email
+        hashed_password:
+          type: string
+        is_active:
+          type: boolean
+        role:
+          type: string
+      required:
+        - name
+        - email
+        - hashed_password
+        - is_active
+        - role
